--- a/welcome.html
+++ b/welcome.html
@@ -9,9 +9,9 @@
     <div layout="column" layout-margin></div>
     <div id="slideshow-new-logo" layout="column" flex-none>
         <img ng-repeat="image in images track by $index" width="1000"
-             ng-src="static/img/{{ image }}.png" ng-show="$index == counter"/>
+             ng-src="/static/img/{{ image }}.png" ng-show="$index == counter"/>
         <span layout="row" layout-align="center center">
-            <img src="static/img/favicon.ico">
+            <img src="/static/img/favicon.ico">
         </span>
     </div>
 </div>
