Use CSS To Color Logo Instead Of Hard Coding Colors

--- a/layout.html
+++ b/layout.html
@@ -9,7 +9,7 @@
         <md-sidenav id="sidenav" class="md-sidenav-left" ng-class="{'open': $ls.loggedIn, 'tight': $ls.loggedIn && $ls.tightNav}"
                     md-whiteframe="1" md-is-locked-open="$mdMedia('gt-xs')" flex-none>
             <md-toolbar layout="row" layout-align="start center" md-colors="::{background: 'grey-A100'}">
-                <md-icon md-svg-icon="logo"></md-icon>
+                <md-icon md-svg-icon="logo" md-colors="::{fill: 'accent-800'}"></md-icon>
                 <b md-colors="::{color: 'accent-800'}">UOS</b>
                 <span md-colors="::{color: 'primary-800'}">HUB</span>
             </md-toolbar>
