Add A Nicely Animated UOS HUB Slogan In Page Not Found

--- a/includes.html
+++ b/includes.html
@@ -12,6 +12,7 @@
             <link rel="stylesheet" href="/static/css/courses.css">
             <link rel="stylesheet" href="/static/css/email.css">
             <link rel="stylesheet" href="/static/css/calendar.css">
+            <link rel="stylesheet" href="/static/css/notfound.css">
         {% endcompress %}
 
         <!-- Angular Material requires Angular.js Libraries -->
