--- a/notfound.html
+++ b/notfound.html
@@ -1,1 +1,16 @@
-<h1>Page Not Found!</h1>
+<div layout="row" flex="10"></div>
+<div id="slogan" layout="row" layout-align="center center">
+    <div>
+        <md-icon md-svg-icon="logo"></md-icon>
+        <md-icon md-svg-icon="logo"></md-icon>
+        <md-icon md-svg-icon="logo"></md-icon>
+        <md-icon md-svg-icon="logo"></md-icon>
+        <md-icon md-svg-icon="logo"></md-icon>
+        <md-icon md-svg-icon="logo"></md-icon>
+        <i></i>
+    </div>
+    <span>
+        <img src="/static/img/slogan.png">
+        <span></span>
+    </span>
+</div>
