Place The Login Dialog In Its Own Directive

--- a/welcome.html
+++ b/welcome.html
@@ -3,8 +3,8 @@
     <div layout="column" flex>
         <h1 class="md-display-1" md-colors="{color: 'primary'}">Forget UOS, Try UOS HUB</h1>
         <p class="md-headline">This'll revolutionize your experience with UOS online services and combine all of them in one place (Blackboard, myUDC, Outlook Email)</p>
-        <md-button class="md-raised" layout-padding ng-click="$parent.login($event)">Take a Tour</md-button>
-        <md-button class="md-raised" layout-padding ng-click="$parent.login($event)">Get Started, Login</md-button>
+        <md-button class="md-raised" layout-padding login>Take a Tour</md-button>
+        <md-button class="md-raised" layout-padding login>Get Started, Login</md-button>
     </div>
     <div layout="column" layout-margin></div>
     <div id="slideshow-new-logo" layout="column" flex-none>
