--- a/layout.html
+++ b/layout.html
@@ -1,7 +1,7 @@
 <html ng-app="UOSHUB" ng-cloak>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>UOS HUB</title>
+        <title ng-bind="title">UOS HUB</title>
         <base href="/">
         <!--INCLUDES-->
     </head>
