Use Page Loading Factory On Page Not Found As Well

--- a/includes.html
+++ b/includes.html
@@ -39,4 +39,5 @@
             <script src="/static/js/courses.js"></script>
             <script src="/static/js/email.js"></script>
             <script src="/static/js/calendar.js"></script>
+            <script src="/static/js/notfound.js"></script>
         {% endcompress %}
