--- a/includes.html
+++ b/includes.html
@@ -1,8 +1,9 @@
 {% load compress %}
         <!-- Angular Material style sheet -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.4/angular-material.min.css">
-        <!-- Font Awesome Icon Pack -->
+        <!-- Font Awesome Icon Pack & Roboto Font -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400">
         <!-- Our Style Sheets -->
         {% compress css %}
             <link rel="stylesheet" href="/static/css/layout.css">
