--- a/schedule.html
+++ b/schedule.html
@@ -1,3 +1,11 @@
+<script type="text/ng-template" id="schedule">
+    <md-select ng-model="$ls.semester" flex="25">
+        <md-option ng-repeat="semester in $ls.semestersTitles track by $index" ng-value="$index" ng-disabled="$index > 1">{{ semester }}</md-option>
+    </md-select>
+    <span flex></span>
+    <md-button class="md-accent md-hue-2" ng-click="$ls.semester = -1">Design Your Schedule</md-button>
+</script>
+
 <md-card flex>
     <md-card-content layout="row">
         <div class="day as-hours-head" md-colors="::{background: 'green-50'}"></div>
