--- a/email.html
+++ b/email.html
@@ -1,3 +1,8 @@
+<script type="text/ng-template" id="email">
+    <div flex></div>
+    <md-button class="md-accent md-hue-2" ng-click="null">Write a new Email</md-button>
+</script>
+
 <div layout="row" flex>
     <md-card flex="33">
         <md-content layout="row" flex>
