--- a/layout.html
+++ b/layout.html
@@ -16,7 +16,7 @@
             <md-content md-colors="::{background: 'accent-900'}" flex>
                 <md-list flex>
                     <md-list-item class="md-1-line" ng-repeat="link in links" ng-click="goto(link.title)"
-                                  md-colors="{background: $loc.path() == '/' + link.title + '/' ? 'accent-700' : 'accent-900'}">
+                                  md-colors="{background: page == link.title ? 'accent-700' : 'accent-900'}">
                         <md-icon md-font-icon="fa fa-{{ link.icon }} fa-fw" class="md-avatar-icon"></md-icon>
                         <div class="md-list-item-text" flex>
                             <p class="md-title">{{ capitalize(link.title) }}</p>
@@ -34,14 +34,8 @@
                         <md-icon md-font-icon="fa fa-bars fa-lg"></md-icon>
                     </md-button>
                     <md-button ng-hide="$ls.loggedIn" class="md-accent md-hue-2" ng-click="goto('/calendar/')">Academic Calendar</md-button>
-                    <md-select ng-show="$loc.path() == '/courses/'" ng-model="$ls.course" flex="25">
-                        <md-option ng-repeat="(id, course) in $ls.semesters[$ls.semester]" ng-value="id">{{ course.name }}</md-option>
-                    </md-select>
-                    <ng-include src="toolbar" layout="row" flex></ng-include>
-                    <div ng-if="!toolbar" flex></div>
-                    <md-button ng-show="$loc.path() == '/email/'" class="md-accent md-hue-2" ng-click="null">Write a new Email</md-button>
-                    <md-button ng-show="$loc.path() == '/calendar/'" class="md-accent md-hue-2" ng-click="setDirection('vertical')">List View</md-button>
-                    <md-button ng-show="$loc.path() == '/calendar/'" class="md-accent md-hue-2" ng-click="setDirection('horizontal')">Table View</md-button>
+                    <ng-include src="hasToolbar && page" layout="row" flex></ng-include>
+                    <div ng-if="!hasToolbar" flex></div>
                     <h2 ng-show="$ls.loggedIn" md-colors="::{color: 'accent-800'}">{{ $ls.name }}</h2>
                     <md-button ng-if="!$ls.loggedIn" class="md-primary md-hue-2" login>Login</md-button>
                     <md-button ng-if="$ls.loggedIn" class="md-primary md-hue-2" ng-click="logout()">Logout</md-button>
