--- a/calendar.html
+++ b/calendar.html
@@ -1,11 +1,17 @@
+<script type="text/ng-template" id="calendar">
+    <div flex></div>
+    <md-button class="md-accent md-hue-2" ng-click="setDirection('vertical')">List View</md-button>
+    <md-button class="md-accent md-hue-2" ng-click="setDirection('horizontal')">Table View</md-button>
+</script>
+
 <md-card flex layout="column">
     <calendar-md flex style="height: 0" 
-        calendar-direction="$ls.direction"
+        calendar-direction="direction"
         title-format="'MMMM y'"
         ng-model="selectedDate"
         week-starts-on="firstDayOfWeek"
         tooltips="tooltips"
-        day-format="$ls.dayFormat"
+        day-format="dayFormat"
         day-label-format="'EEE'"
         day-label-tooltip-format="'EEEE'"
         day-tooltip-format="'fullDate'"
