Place The Login Derivative In A Separate JS File

--- a/includes.html
+++ b/includes.html
@@ -34,6 +34,7 @@
             <script src="/static/js/scripts.js"></script>
             <script src="/static/js/app.js"></script>
             <script src="/static/js/layout.js"></script>
+            <script src="/static/js/login.js"></script>
             <script src="/static/js/welcome.js"></script>
             <script src="/static/js/dashboard.js"></script>
             <script src="/static/js/schedule.js"></script>
