Improve Welcome Titles & Redirect To Dashboard If Logged In

--- a/login.html
+++ b/login.html
@@ -1,9 +1,9 @@
-<md-dialog flex="20" md-colors="{background: 'default-grey-A100'}">
+<md-dialog flex="25" md-colors="{background: 'default-grey-A100'}">
     <form layout="column" class="no-margin" ng-submit="submit({sid, pin})">
         <md-toolbar flex="10">
             <div class="md-toolbar-tools" flex>
-                <span flex>Welcome to UOS HUB</span>
-                <md-button class="md-icon-button" ng-click="cancel()">
+                <span class="md-headline" flex>Welcome to UOS HUB</span>
+                <md-button class="md-icon-button" style="margin-left: 0" ng-click="cancel()">
                     <md-icon md-font-icon="fa fa-times fa-lg"></md-icon>
                 </md-button>
             </div>
