--- a/welcome.html
+++ b/welcome.html
@@ -1,8 +1,8 @@
-<div layout="row" flex="10"></div>
+<div layout="row" flex="10" ng-init="$ls.loggedIn && goto('dashboard')"></div>
 <div layout="row" layout-align="center center">
     <div layout="column" flex="40" layout-padding>
-        <h1 class="md-display-1" md-colors="{color: 'primary'}">Forget UOS, Try UOS HUB</h1>
-        <p class="md-headline">This'll revolutionize your experience with UOS online services and combine all of them in one place (Blackboard, myUDC, Outlook Email)</p>
+        <span class="md-headline" md-colors="{color: 'primary'}">By Students, For Students</span>
+        <span class="md-subhead">This'll revolutionize your experience with UOS online services and combine all of them in one place (Blackboard, myUDC, Outlook Email)</span>
         <md-button class="md-raised" layout-padding login>Take a Tour</md-button>
         <md-button class="md-raised" layout-padding login>Get Started, Login</md-button>
     </div>
