--- a/schedule.html
+++ b/schedule.html
@@ -1,9 +1,9 @@
 <script type="text/ng-template" id="schedule">
-    <md-select ng-model="$ls.semester" flex="25">
+    <md-select ng-model="$ls.selected.semester" flex="25">
         <md-option ng-repeat="semester in $ls.semestersTitles track by $index" ng-value="$index" ng-disabled="$index > 1">{{ semester }}</md-option>
     </md-select>
     <span flex></span>
-    <md-button class="md-accent md-hue-2" ng-click="$ls.semester = -1">Design Your Schedule</md-button>
+    <md-button class="md-accent md-hue-2" ng-click="$ls.selected.semester = -1">Design Your Schedule</md-button>
 </script>
 
 <md-card flex>
@@ -18,7 +18,7 @@
         <div ng-if="!$last" class="half hour" style="top: {{ 5 + height * (0.5 + fraction) }}%"></div>
         <div class="hour" style="top: {{ 5 + fraction * height }}%" ng-repeat-end></div>
 
-        <div class="classes-container" ng-repeat="(id, course) in $ls.semesters[$ls.semester]">
+        <div class="classes-container" ng-repeat="(id, course) in $ls.semesters[$ls.selected.semester]">
             <div ng-repeat="point in course.points" ng-click="showCourse($event, id, point[0])"
                  class="class" md-colors="::{background: course.color, color: 'grey-A100'}"
                  ng-style="{height: course.length * height + '%', left: point[0] + '%', top: point[1] + '%'}">
