Remove Useless Declarations & Move Styles From HTML To CSS

--- a/calendar.html
+++ b/calendar.html
@@ -5,7 +5,7 @@
 </script>
 
 <md-card flex layout="column">
-    <calendar-md flex style="height: 0" 
+    <calendar-md flex
         calendar-direction="$ls.selected.calDir"
         title-format="'MMMM y'"
         ng-model="selectedDate"
