--- a/email.html
+++ b/email.html
@@ -62,7 +62,7 @@
                     <span class="md-display-1">{{ current.title + current.index }}</span>
                 </md-card-title-text>
             </md-card-title>
-            <md-card-header style="margin: 8px 0 24px">
+            <md-card-header>
                 <div id="email-circle" class="fix-icon" md-colors="{background: 'blue-grey-400'}">{{ current.initial + current.index }}</div>
                 <md-card-header-text>
                     <span class="md-title">{{ current.sender(current.index) }}</span>
