--- a/notfound.html
+++ b/notfound.html
@@ -1,5 +1,4 @@
-<div layout="row" flex="10"></div>
-<div id="slogan" layout="row" layout-align="center center">
+<div id="slogan" layout="row" layout-align="center center" layout-margin>
     <div>
         <md-icon md-svg-icon="logo"></md-icon>
         <md-icon md-svg-icon="logo"></md-icon>
