--- a/welcome.html
+++ b/welcome.html
@@ -1,5 +1,4 @@
-<div layout="row" flex="10" ng-init="$ls.loggedIn && goto('dashboard')"></div>
-<div layout="row" layout-align="center center">
+<div layout="row" layout-align="center center" ng-init="$ls.loggedIn && goto('dashboard')" flex>
     <div layout="column" flex="40" layout-padding>
         <span class="md-headline" md-colors="{color: 'primary'}">By Students, For Students</span>
         <span class="md-subhead">This'll revolutionize your experience with UOS online services and combine all of them in one place (Blackboard, myUDC, Outlook Email)</span>
