--- a/dashboard.html
+++ b/dashboard.html
@@ -1,12 +1,12 @@
-<div layout="row" flex="60">
-    <md-card flex>
+<div layout="row" flex-gt-xs="60" layout-xs="column">
+    <md-card flex-gt-xs>
         <md-toolbar md-colors="{background: 'orange-600', color: 'grey-A100'}">
             <div class="md-toolbar-tools" flex>
                 <span flex>Updates</span>
             </div>
         </md-toolbar>
-        <md-content flex>
-            <md-list flex>
+        <md-content>
+            <md-list>
                 <md-list-item class="md-2-line" ng-repeat="update in $ls.updates | orderBy: '-time'" ng-click="null">
                     <div class="md-list-item-text" flex>
                         <h3>{{ update.title }}</h3>
@@ -20,14 +20,14 @@
             </md-list>
         </md-content>
     </md-card>
-    <md-card flex>
+    <md-card flex-gt-xs>
         <md-toolbar md-colors="{background: 'blue-600'}">
             <div class="md-toolbar-tools" flex>
                 <span flex>Emails</span>
             </div>
         </md-toolbar>
-        <md-content flex>
-            <md-list flex>
+        <md-content>
+            <md-list>
                 <md-list-item class="md-2-line" ng-repeat="index in repeat" ng-init="email = emails[index%3]" ng-click="null">
                     <div class="md-avatar-icon fix-icon" md-colors="{background: 'blue-grey-400'}">{{ getInitials(email.sender) }}</div>
                     <div class="md-list-item-text" flex>
@@ -39,14 +39,14 @@
             </md-list>
         </md-content>
     </md-card>
-    <md-card flex>
+    <md-card flex-gt-xs>
         <md-toolbar md-colors="{background: 'primary-600'}">
             <div class="md-toolbar-tools" flex>
                 <span flex>Upcomming Deadlines</span>
             </div>
         </md-toolbar>
-        <md-content flex>
-            <md-list flex>
+        <md-content>
+            <md-list>
                 <md-list-item class="md-3-line" ng-repeat="index in repeat" ng-init="task = tasks[index%3]" ng-click="null">
                     <div class="md-list-item-text" flex>
                         <h3>{{ task.title }}</h3>
@@ -63,8 +63,8 @@
         </md-content>
     </md-card>
 </div>
-<div layout="row" flex="40">
-    <md-card flex layout="row">
+<div layout="row" flex-gt-xs="40" layout-xs="column">
+    <md-card flex-gt-xs layout="row">
         <md-button class="no-margin fill-width" layout="column" layout-align="end start" layout-padding
                    style="background: url('https://images.pexels.com/photos/147634/pexels-photo-147634.jpeg?dl&w=640&h=426') center">
             <div layout="column" layout-align="center center" layout-padding style="font-size: 20px">
@@ -76,14 +76,14 @@
             </div>
         </md-button>
     </md-card>
-    <md-card flex>
+    <md-card flex-gt-xs>
         <md-toolbar md-colors="{background: 'lime-700', color: 'grey-A100'}">
             <div class="md-toolbar-tools" flex>
                 <span flex>Today's Classes</span>
             </div>
         </md-toolbar>
-        <md-content flex>
-            <md-list flex>
+        <md-content>
+            <md-list>
                 <md-list-item class="md-2-line" ng-repeat="class in classes" ng-click="null"
                               style="border-left: 4px solid" md-colors="{borderColor: class.color}">
                     <div class="md-list-item-text" flex="30">
@@ -100,14 +100,14 @@
             </md-list>
         </md-content>
     </md-card>
-    <md-card flex>
+    <md-card flex-gt-xs>
         <md-toolbar md-colors="{background: 'teal-600'}">
             <div class="md-toolbar-tools" flex>
                 <span flex>Grades</span>
             </div>
         </md-toolbar>
-        <md-content flex>
-            <md-list flex>
+        <md-content>
+            <md-list>
                 <md-list-item class="md-1-line" ng-repeat="grade in grades" ng-click="null">
                     <div class="md-list-item-text" flex>
                         <p>{{ grade.course }}</p>
@@ -118,14 +118,14 @@
             </md-list>
         </md-content>
     </md-card>
-    <md-card flex>
+    <md-card flex-gt-xs>
         <md-toolbar md-colors="{background: 'red-600'}">
             <div class="md-toolbar-tools" flex>
                 <span flex>Holds</span>
             </div>
         </md-toolbar>
-        <md-content flex>
-            <md-list flex>
+        <md-content>
+            <md-list>
                 <md-list-item class="md-1-line" ng-click="null">
                     <div class="md-list-item-text" flex>
                         <p>Hold On Courses Registration</p>
