--- a/dashboard.html
+++ b/dashboard.html
@@ -45,7 +45,7 @@
     <md-card flex-gt-xs>
         <md-toolbar md-colors="{background: 'primary-600'}">
             <div class="md-toolbar-tools" flex>
-                <span flex>Upcomming Deadlines</span>
+                <span flex>Deadlines</span>
             </div>
         </md-toolbar>
         <md-content>
