--- a/schedule.html
+++ b/schedule.html
@@ -1,6 +1,6 @@
 <script type="text/ng-template" id="schedule">
-    <md-select ng-model="$ls.selected.semester" flex="25">
-        <md-option ng-repeat="semester in $ls.semestersTitles track by $index" ng-value="$index" ng-disabled="$index > 1">{{ semester }}</md-option>
+    <md-select ng-model="$ls.selected.term" ng-click="$toolbar.getTerms()" flex="25">
+        <md-option ng-repeat="term in $ls.terms | orderTerms" ng-value="term">{{ term | termTitle }}</md-option>
     </md-select>
     <span flex></span>
     <md-button class="md-accent md-hue-2" ng-click="$ls.selected.semester = -1">Design Your Schedule</md-button>
